Revisión Inicial con SPI y OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,13 @@ board = d1_mini
 framework = arduino
 
 lib_deps =
-  # Using a library name
+  #Using a library name
+  
   PubSubClient
   
 ; Serial Monitor options
 monitor_speed = 115200
+
+; Configuración OTA
+;upload_protocol = espota
+;upload_port = 192.168.1.50
