Revisión Inicial con SPI, OTA e ISR en memoria IRAM

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,12 +15,14 @@ framework = arduino
 
 lib_deps =
   #Using a library name
-  
   PubSubClient
   
 ; Serial Monitor options
 monitor_speed = 115200
 
 ; Configuración OTA
+;upload_port = 192.168.1.150
+;upload_flags =
+    ;--port=3232
+    ;--auth="2047"
 ;upload_protocol = espota
-;upload_port = 192.168.1.50
