--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ framework = arduino
 
 lib_deps =
   #Using a library name
-  PubSubClient
+  AsyncMqttClient
   
 ; Serial Monitor options
 monitor_speed = 115200
