Multi_archivo OTA desbloqueo NFC Alexa

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,8 +21,6 @@ lib_deps =
 monitor_speed = 115200
 
 ; Configuración OTA
-;upload_port = 192.168.1.150
-;upload_flags =
-    ;--port=3232
-    ;--auth="2047"
-;upload_protocol = espota
+;upload_port = "Accesos_NFC"
+upload_port = "192.168.1.57"
+upload_protocol = espota
