añadido programacion nodered

--- a/platformio.ini
+++ b/platformio.ini
@@ -22,5 +22,5 @@ monitor_speed = 115200
 
 ; Configuración OTA
 ;upload_port = "Accesos_NFC"
-upload_port = "192.168.1.57"
-upload_protocol = espota
+;upload_port = "xxx.xxx.x.xx"
+;upload_protocol = espota
