--- a/platformio.ini
+++ b/platformio.ini
@@ -16,11 +16,12 @@ framework = arduino
 lib_deps =
   #Using a library name
   AsyncMqttClient
+  https://github.com/Oliv4945/Adafruit-PN532.git
 
 ; Serial Monitor options
 monitor_speed = 115200
 
 ; Configuración OTA
 ;upload_port = "Accesos_NFC"
-upload_port = "192.168.1.57"
-upload_protocol = espota
+;upload_port = "192.168.1.57"
+;upload_protocol = espota
